xforms/package/alt/xforms_forms.pp


procedure fl_insert_browser_line(ob:PFL_OBJECT; linenumb:longint; newtext:Pchar);cdecl;external;
(* Const before type ignored *)
procedure fl_insert_browser_line_f(ob:PFL_OBJECT; linenumb:longint; fmt:Pchar; args:array of const);cdecl;external;
procedure fl_insert_browser_line_f(ob:PFL_OBJECT; linenumb:longint; fmt:Pchar);cdecl;external;
procedure fl_delete_browser_line(ob:PFL_OBJECT; linenumb:longint);cdecl;external;
(* Const before type ignored *)
procedure fl_replace_browser_line(ob:PFL_OBJECT; linenumb:longint; newtext:Pchar);cdecl;external;
(* Const before type ignored *)
procedure fl_replace_browser_line_f(ob:PFL_OBJECT; linenumb:longint; fmt:Pchar; args:array of const);cdecl;external;
procedure fl_replace_browser_line_f(ob:PFL_OBJECT; linenumb:longint; fmt:Pchar);cdecl;external;
(* Const before type ignored *)
function fl_get_browser_line(ob:PFL_OBJECT; linenumb:longint):Pchar;cdecl;external;
(* Const before type ignored *)
function fl_load_browser(ob:PFL_OBJECT; filename:Pchar):longint;cdecl;external;
procedure fl_select_browser_line(ob:PFL_OBJECT; line:longint);cdecl;external;
procedure fl_deselect_browser_line(ob:PFL_OBJECT; line:longint);cdecl;external;
procedure fl_deselect_browser(ob:PFL_OBJECT);cdecl;external;
function fl_isselected_browser_line(ob:PFL_OBJECT; line:longint):longint;cdecl;external;
function fl_get_browser_topline(ob:PFL_OBJECT):longint;cdecl;external;
function fl_get_browser(ob:PFL_OBJECT):longint;cdecl;external;
function fl_get_browser_maxline(ob:PFL_OBJECT):longint;cdecl;external;
function fl_get_browser_screenlines(ob:PFL_OBJECT):longint;cdecl;external;
procedure fl_set_browser_topline(ob:PFL_OBJECT; line:longint);cdecl;external;
procedure fl_set_browser_bottomline(ob:PFL_OBJECT; line:longint);cdecl;external;
procedure fl_set_browser_fontsize(ob:PFL_OBJECT; size:longint);cdecl;external;
procedure fl_set_browser_fontstyle(ob:PFL_OBJECT; style:longint);cdecl;external;
procedure fl_set_browser_specialkey(ob:PFL_OBJECT; specialkey:longint);cdecl;external;
procedure fl_set_browser_vscrollbar(ob:PFL_OBJECT; on:longint);cdecl;external;
procedure fl_set_browser_hscrollbar(ob:PFL_OBJECT; on:longint);cdecl;external;
procedure fl_set_browser_line_selectable(ob:PFL_OBJECT; line:longint; flag:longint);cdecl;external;
procedure fl_get_browser_dimension(ob:PFL_OBJECT; x:PFL_Coord; y:PFL_Coord; w:PFL_Coord; h:PFL_Coord);cdecl;external;
procedure fl_set_browser_dblclick_callback(ob:PFL_OBJECT; cb:TFL_CALLBACKPTR; a:longint);cdecl;external;
function fl_get_browser_xoffset(ob:PFL_OBJECT):TFL_Coord;cdecl;external;
function fl_get_browser_rel_xoffset(ob:PFL_OBJECT):Tdouble;cdecl;external;
procedure fl_set_browser_xoffset(ob:PFL_OBJECT; npixels:TFL_Coord);cdecl;external;
procedure fl_set_browser_rel_xoffset(ob:PFL_OBJECT; val:Tdouble);cdecl;external;
function fl_get_browser_yoffset(ob:PFL_OBJECT):TFL_Coord;cdecl;external;
function fl_get_browser_rel_yoffset(ob:PFL_OBJECT):Tdouble;cdecl;external;
procedure fl_set_browser_yoffset(ob:PFL_OBJECT; npixels:TFL_Coord);cdecl;external;
procedure fl_set_browser_rel_yoffset(ob:PFL_OBJECT; val:Tdouble);cdecl;external;
procedure fl_set_browser_scrollbarsize(ob:PFL_OBJECT; hh:longint; vw:longint);cdecl;external;
procedure fl_show_browser_line(ob:PFL_OBJECT; j:longint);cdecl;external;
function fl_set_default_browser_maxlinelength(n:longint):longint;cdecl;external;
{$ifndef FL_BROWSER_SCROLL_CALLBACKt}
{$define FL_BROWSER_SCROLL_CALLBACKt}    
    type

      TFL_BROWSER_SCROLL_CALLBACK = procedure (para1:PFL_OBJECT; para2:longint; para3:pointer);cdecl;
{$endif}

procedure fl_set_browser_hscroll_callback(para1:PFL_OBJECT; para2:TFL_BROWSER_SCROLL_CALLBACK; para3:pointer);cdecl;external;
procedure fl_set_browser_vscroll_callback(para1:PFL_OBJECT; para2:TFL_BROWSER_SCROLL_CALLBACK; para3:pointer);cdecl;external;
function fl_get_browser_line_yoffset(para1:PFL_OBJECT; para2:longint):longint;cdecl;external;
function fl_get_browser_hscroll_callback(para1:PFL_OBJECT):TFL_BROWSER_SCROLL_CALLBACK;cdecl;external;
function fl_get_browser_vscroll_callback(para1:PFL_OBJECT):TFL_BROWSER_SCROLL_CALLBACK;cdecl;external;
function fl_get_browser_scrollbar_repeat(para1:PFL_OBJECT):longint;cdecl;external;
procedure fl_set_browser_scrollbar_repeat(para1:PFL_OBJECT; para2:longint);cdecl;external;
{$endif}
    { ! defined FL_BROWSER_H  }
    {*
     * \file button.h
     *
     * All Buttons: regular button, light button and round button
     *
      }
{$ifndef FL_BUTTON_H}
{$define FL_BUTTON_H}    
    type
      PFL_BUTTON_TYPE = ^TFL_BUTTON_TYPE;
      TFL_BUTTON_TYPE =  Longint;
      Const
        FL_NORMAL_BUTTON = 0;
        FL_PUSH_BUTTON = 1;
        FL_RADIO_BUTTON = 2;
        FL_HIDDEN_BUTTON = 3;
        FL_TOUCH_BUTTON = 4;
        FL_INOUT_BUTTON = 5;
        FL_RETURN_BUTTON = 6;
        FL_HIDDEN_RET_BUTTON = 7;
        FL_MENU_BUTTON = 8;
;
      FL_TOGGLE_BUTTON = FL_PUSH_BUTTON;      
    { state of button (on/off)  }
    { mouse button that caused the push      }
    { time since last touch (TOUCH buttons)  }
    { what event triggers redraw             }
    { set while drawn as pushed down         }
    { mouse buttons button reacts to         }
    { reserved for class specfic stuff       }
    { misc. things                           }
    type
      PFL_BUTTON_SPEC = ^TFL_BUTTON_SPEC;
      TFL_BUTTON_SPEC = record
          pixmap : TPixmap;
          mask : TPixmap;
          bits_w : dword;
          bits_h : dword;
          val : longint;
          mousebut : longint;
          timdel : longint;
          event : longint;
          is_pushed : longint;
          react_to : array[0..4] of longint;
          cspecl : longint;
          cspecv : pointer;
          filename : Pchar;
          focus_pixmap : TPixmap;
          focus_mask : TPixmap;
          focus_filename : Pchar;
        end;

    const
      FL_BUTTON_STRUCT = FL_BUTTON_SPEC;      
    type

      TFL_DrawButton = procedure (para1:PFL_OBJECT);cdecl;

      TFL_CleanupButton = procedure (para1:PFL_BUTTON_STRUCT);cdecl;

    const
      FL_DRAWBUTTON = FL_DrawButton;      
      FL_CLEANUPBUTTON = FL_CleanupButton;      
    { normal button default  }
      FL_BUTTON_BOXTYPE = FL_UP_BOX;      
      FL_BUTTON_COL1 = FL_COL1;      
      FL_BUTTON_COL2 = FL_COL1;      
      FL_BUTTON_LCOL = FL_LCOL;      
      FL_BUTTON_ALIGN = FL_ALIGN_CENTER;      
      FL_BUTTON_MCOL1 = FL_MCOL;      
      FL_BUTTON_MCOL2 = FL_MCOL;      
      FL_BUTTON_BW = FL_BOUND_WIDTH;      
    { light button defaults  }
      FL_LIGHTBUTTON_BOXTYPE = FL_UP_BOX;      
      FL_LIGHTBUTTON_COL1 = FL_COL1;      
      FL_LIGHTBUTTON_COL2 = FL_YELLOW;      
      FL_LIGHTBUTTON_LCOL = FL_LCOL;      
      FL_LIGHTBUTTON_ALIGN = FL_ALIGN_CENTER or FL_ALIGN_INSIDE;      
      FL_LIGHTBUTTON_TOPCOL = FL_COL1;      
      FL_LIGHTBUTTON_MCOL = FL_MCOL;      

    { was #define dname def_expr }
    function FL_LIGHTBUTTON_MINSIZE : TFL_Coord;      

    { round button defaults  }
    const
      FL_ROUNDBUTTON_BOXTYPE = FL_NO_BOX;      
      FL_ROUNDBUTTON_COL1 = FL_MCOL;      
      FL_ROUNDBUTTON_COL2 = FL_YELLOW;      
      FL_ROUNDBUTTON_LCOL = FL_LCOL;      
      FL_ROUNDBUTTON_ALIGN = FL_ALIGN_CENTER;      
      FL_ROUNDBUTTON_TOPCOL = FL_COL1;      
      FL_ROUNDBUTTON_MCOL = FL_MCOL;      
    { round3d button defaults  }
      FL_ROUND3DBUTTON_BOXTYPE = FL_NO_BOX;      
      FL_ROUND3DBUTTON_COL1 = FL_COL1;      
      FL_ROUND3DBUTTON_COL2 = FL_BLACK;      
      FL_ROUND3DBUTTON_LCOL = FL_LCOL;      
      FL_ROUND3DBUTTON_ALIGN = FL_ALIGN_CENTER;      
      FL_ROUND3DBUTTON_TOPCOL = FL_COL1;      
      FL_ROUND3DBUTTON_MCOL = FL_MCOL;      
    { check button defaults  }
      FL_CHECKBUTTON_BOXTYPE = FL_NO_BOX;      
      FL_CHECKBUTTON_COL1 = FL_COL1;      
      FL_CHECKBUTTON_COL2 = FL_YELLOW;      
      FL_CHECKBUTTON_LCOL = FL_LCOL;      
      FL_CHECKBUTTON_ALIGN = FL_ALIGN_CENTER;      
      FL_CHECKBUTTON_TOPCOL = FL_COL1;      
      FL_CHECKBUTTON_MCOL = FL_MCOL;      
    { bitmap button defaults  }
      FL_BITMAPBUTTON_BOXTYPE = FL_UP_BOX;      
    { bitmap background   }
      FL_BITMAPBUTTON_COL1 = FL_COL1;      
    { "focus" color        }
      FL_BITMAPBUTTON_COL2 = FL_BLUE;      
    { bitmap foreground    }
      FL_BITMAPBUTTON_LCOL = FL_LCOL;      
      FL_BITMAPBUTTON_ALIGN = FL_ALIGN_BOTTOM;      
    { bitmap button defaults  }
      FL_PIXMAPBUTTON_BOXTYPE = FL_UP_BOX;      
      FL_PIXMAPBUTTON_COL1 = FL_BUTTON_COL1;      
      FL_PIXMAPBUTTON_COL2 = FL_BUTTON_COL2;      
      FL_PIXMAPBUTTON_LCOL = FL_BUTTON_LCOL;      
      FL_PIXMAPBUTTON_MCOL1 = FL_BUTTON_MCOL1;      
      FL_PIXMAPBUTTON_MCOL2 = FL_BUTTON_MCOL2;      
      FL_PIXMAPBUTTON_ALIGN = FL_ALIGN_BOTTOM;      
    {**** Routines **** }
(* Const before type ignored *)
